<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".fragment.CurrentWeatherFragment">

    <TextView
        android:id="@+id/failedTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Failed to fetch Data"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        android:layout_marginBottom="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="28sp"
                    tools:text="134.5\u00B0 C" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    tools:text="5/7/2018" />

                <TextView
                    android:id="@+id/dayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:text="Tuesday" />

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    tools:text="Dhaka" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="30dp"
                    android:id="@+id/weatherIconImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    tools:src="@drawable/clouds" />

                <TextView
                    android:id="@+id/weatherDescTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000"
                    tools:text="Scattered Cloud" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/custom_gradiant"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/maxTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Max"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/maxTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    tools:text="17.0\u00B0 C" />

                <TextView
                    android:id="@+id/minTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Min"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/minTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    tools:text="17.0\u00B0 C" />

                <ImageView
                    android:id="@+id/tempIconIV"
                    android:layout_width="40dp"
                    android:layout_height="80dp"
                    tools:src="@drawable/temperature" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/custom_gradiant"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sunriseTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sun_rise"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sunriseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    tools:text="07:09:24 AM" />

                <TextView
                    android:id="@+id/sunsetTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sun_set"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sunsetTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    tools:text="05:45:00 PM" />

                <ImageView
                    android:id="@+id/sunsetIconIV"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    tools:src="@drawable/sunset" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/custom_gradiant"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/humidityTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/humidity"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/humidityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:text="86%" />

                <TextView
                    android:id="@+id/pressureTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/pressure"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pressureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    tools:text="1021.71 hPa" />

                <ImageView
                    android:id="@+id/rainIconIV"
                    android:layout_width="40dp"
                    android:layout_height="80dp"
                    tools:src="@drawable/rain"
                    android:textColor="#000" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>